--- a/Анализ_v1.1.ipynb
+++ b/Анализ_v1.1.ipynb
@@ -1530,7 +1530,7 @@
     {
       "cell_type": "code",
       "source": [
-        "best_exp = pd.DataFrame(columns=['tn_ved', 'perod', '1_country', '1_country_sum', '1_country_weight', '2_country', '2_country_sum', '2_country_weight', '3_country', '3_country_sum', '3_country_weight', '4_country', '4_country_sum', '4_country_weight',  '5_country', '5_country_sum', '5_country_weight'])"
+        "best_exp = pd.DataFrame(columns=['tn_ved', 'period', '1_country', '1_country_sum', '1_country_weight', '2_country', '2_country_sum', '2_country_weight', '3_country', '3_country_sum', '3_country_weight', '4_country', '4_country_sum', '4_country_weight',  '5_country', '5_country_sum', '5_country_weight'])"
       ],
       "metadata": {
         "id": "lr5_LUiCaJSN"
@@ -2019,7 +2019,7 @@
     {
       "cell_type": "code",
       "source": [
-        "last_year = best_exp[best_exp['period']== 2021]"
+        "last_year = best_exp[best_exp['period']== '2021']"
       ],
       "metadata": {
         "id": "vemPmKNCjCi8"
@@ -2030,7 +2030,7 @@
     {
       "cell_type": "code",
       "source": [
-        "last_year.drop(columns = ['Unnamed: 0'],axis = 1, inplace=True)"
+        "#last_year.drop(columns = ['Unnamed: 0'],axis = 1, inplace=True)"
       ],
       "metadata": {
         "id": "0CFEp5QdC0Rn"
