--- a/Анализ_v1_2_(злаки_тн_10).ipynb
+++ b/Анализ_v1_2_(злаки_тн_10).ipynb
@@ -1480,7 +1480,7 @@
     {
       "cell_type": "code",
       "source": [
-        "minus_exp.sort_values(by='minus_exp_weight', ascending=False)"
+        "minus_exp_grain.sort_values(by='minus_exp_weight', ascending=False)"
       ],
       "metadata": {
         "colab": {
